name:                DAG
version:             0.1.0.0
synopsis:            Directed Acyclic Graphs.
description:         
homepage:            https://github.com/vladfi1/hs-misc
license:             MIT
license-file:        LICENSE
author:              Vlad Firoiu
maintainer:          vladfi2@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.18

library
  exposed-modules:     PHOAS
                       DAGPHOAS
                       DAGHOAS
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.9
               , profunctors
  default-language:    Haskell2010

